--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
     <nav class="navbar navbar-light bg-dark">
         <a class="navbar-brand" href="#">
-          <img src="images/logo.svg" alt="Camp.in"
-        </a>
+          <img src="images/logo.svg" alt="Camp.in"></a>
       </nav>
     
     
